# LLM-Reasoning-Model-Synthetic-data

./: README.md  pyproject.toml
docs/: OUTPUT_SCHEMA.json  PROMPTS.md
examples/: run_manual.py  run_random.py
laws/: demo_laws.json
scripts/: extract_narratives.py
src/taxfix_musr/: __init__.py  agentic.py  cache.py  few_shot_examples.py  llm_client.py  logic_tree.py  manifest.py  models.py  narrative_generator.py  renderer.py  reports.py  retriever.py  schema_generator.py
src/taxfix_musr/evaluator/: __init__.py  enhanced_scorer.py  human_baseline.py  schema.py  scorer.py  suite.py
tests/: test_edge_cases.py  test_integration.py  test_logic_tree.py  test_renderer_schema.py  test_scorer.py
